# unison-fsmonitor

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  default.nix  release-please-config.json  shell.nix
.github/workflows/: ci.yml  release-please.yml
src/: lib.rs  main.rs  monitor.rs  protocol.rs
