[package]
name = "unison-fsmonitor"
description = "unison-fsmonitor implementation"
repository = "https://github.com/aaronflorey/unison-fsmonitor"
version = "0.3.8"
authors = ["Aaron Florey"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.10"
log = "0.4.29"
notify = "8.2.0"
percent-encoding = "2.3.2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
debug = true
