[package]
name = "unison-fsmonitor"
description = "unison-fsmonitor implementation"
repository = "https://github.com/aaronflorey/unison-fsmonitor"
version = "2.0.2"
authors = ["Aaron Florey"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.10"
log = "0.4.29"
notify = "8.2.0"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
watchman_client = "0.9.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
debug = true
